fix: gap between post info and post title

--- a/components/Threads/desktop/ThreadsList.module.scss
+++ b/components/Threads/desktop/ThreadsList.module.scss
@@ -76,7 +76,8 @@
   width: auto;
   display: flex;
   flex-direction: initial;
-  // opacity: 50%;
+
+  padding: 0.375rem 0;
 
   .user {
     opacity: 60%;
